fixed scrollbars on resize

--- a/letterbrush.css
+++ b/letterbrush.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-size: 1.2em;
   overflow: hidden;
+  font-family: arial;
 }
 
 body.noSelect {
